--- a/static/html/login.html
+++ b/static/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>login Page</title>
     <script type="application/javascript" src="../utils/jquery-3.2.1.min.js"></script>
-    <script src="http://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
+    <script type="application/javascript" src="http://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
     <script type="application/javascript" src="../js/login.js"></script>
 </head>
 <body>
